syntax = "proto3";

option go_package ="./user_pb";

package user_pb;

// ------------------------------------ 
// Messages
// ------------------------------------ 

//--------------------------------user--------------------------------
message User {
  int64 id = 1; //id
  string mobile = 2; //mobile
  string password = 3; //password
  string nickName = 4; //nickName
  string headUrl = 5; //headUrl
  uint64 birthday = 6; //birthday
  string address = 7; //address
  string desc = 8; //desc
  string gender = 9; //gender
  int64 role = 10; //role
}

message AddUserReq {
  string mobile = 1; //mobile
  string password = 2; //password
  string nickName = 3; //nickName
  string headUrl = 4; //headUrl
  uint64 birthday = 5; //birthday
  string address = 6; //address
  string desc = 7; //desc
  string gender = 8; //gender
  int64 role = 9; //role
}

message AddUserResp {
}

message UpdateUserReq {
  int64 id = 1; //id
  string mobile = 2; //mobile
  string password = 3; //password
  string nickName = 4; //nickName
  string headUrl = 5; //headUrl
  uint64 birthday = 6; //birthday
  string address = 7; //address
  string desc = 8; //desc
  string gender = 9; //gender
  int64 role = 10; //role
}

message UpdateUserResp {
}

message DelUserReq {
  int64 id = 1; //id
}

message DelUserResp {
}

message GetUserByIdReq {
  int64 id = 1; //id
}

message GetUserByIdResp {
  User user = 1; //user
}

message SearchUserReq {
  int64 page = 1; //page
  int64 pageSize = 2; //pageSize
  int64 id = 3; //id
  string mobile = 4; //mobile
  string nickName = 5; //nickName
  uint64 birthday = 6; //birthday
  string gender = 7; //gender
  int64 role = 8; //role
}

message SearchUserResp {
  int32 total=1;
  repeated User Data = 2; //user
}



message MobileRequest{
  string mobile = 1;
}

message CreateUserInfo{
  string nickName=1;
  string password = 2;
  string mobile=3;
}

message CheckInfo{
  string password=1;
  string encryptedPassword=2;
}
message PageInfo{
  uint32 pn = 1;
  uint32 pSize = 2;
}
message CheckResponse{
  bool success=1;
}
message UserInfoResponse{
  uint32 id = 1;
  string mobile=2;
  string nickName=3;
  uint64 birthDay=4;
  string gender =5;
  int32 role=6;
  string password=7;
}

message UserListResponse{
  int32 total=1;
  repeated UserInfoResponse data=2;
}
// ------------------------------------ 
// Rpc Func
// ------------------------------------ 
message GenerateTokenReq {
  int64 userId = 1;
  int64 role = 2;
}
message GenerateTokenResp {
  string accessToken = 1;
  int64  accessExpire = 2;
  int64  refreshAfter = 3;
}

service usercenter{ 

	 //-----------------------user----------------------- 
   rpc CreateUser(CreateUserInfo) returns (GenerateTokenResp);//
	 rpc UpdateUser(UpdateUserReq) returns (UpdateUserResp); 
	 rpc DelUser(DelUserReq) returns (DelUserResp); 
	 rpc GetUserById(GetUserByIdReq) returns (GetUserByIdResp);

   rpc SearchUser(SearchUserReq) returns (UserListResponse);//用户列表
   rpc GetUserByMobile(MobileRequest) returns (UserInfoResponse);//手机号查询

   rpc CheckPassWord(CheckInfo) returns (CheckResponse);//检查密码
   rpc generateToken(GenerateTokenReq) returns(GenerateTokenResp); //生成jwt的token
}
